--- a/css/style.css
+++ b/css/style.css
@@ -874,6 +874,9 @@ transform: translateY(-60px);
 
 .example-1 .wrapper {
 background: url(./assets/kali.jpeg) 20% 1%/cover no-repeat;
+border-radius: 17px;
+padding: 17px;
+/* border:1px solid #00ffbb; */
 }
 .example-1 .date {
 position: absolute;
@@ -1036,41 +1039,37 @@ opacity: 1;
 
 /* // STYLE modal */
 
-/* The Modal (background) */
-.modal , .modalClt, .modalCom, .modalCon, .modalFac, .madalReg, .modalTreg, .modalPan {
-display: none; /* Hidden by default */
-position: fixed; /* Stay in place */
-z-index: 1; /* Sit on top */
-left: 0;
-top: 0;
-width: 100%; /* Full width */
-height: 100%; /* Full height */
-overflow: auto; /* Enable scroll if needed */
-background-color: rgb(0,0,0); /* Fallback color */
-background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+/* form-body */
+
+.form-body{
+  /* border: 1rem solid red; */
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 1rem;
+  border-radius: 12px;
+
+
 }
-/* Modal Content/Box */
-.modal .modal-content {
-background-color:  linear-gradient(to right, #00000057, #070707 );
-margin: 15% auto; /* 15% from the top and centered */
-padding: 20px;
-border: 1px solid #888;
-width: 80%; /* Could be more or less, depending on screen size */
-}
-/* The Close Button */
-.close {
-color: #aaa;
-float: right;
-font-size: 38px;
-font-weight: bold;
-}
-.close:hover,
-.close:focus {
-color:rgb(255, 0, 0);
-text-decoration: none;
-font-size: 3rem;
-position: relative;
-transition: 1s all ease-in-out;
-box-shadow: 2px 1px 2px 3p #721c24;
-cursor: pointer;
+.form-submit .form-content button{
+  font-family: sans-serif;
+  font-size: 3rem;
+  font-weight: bolder;
+  height: 100px;
+  width: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 17px;
+
+}.form-submit .typ-con button{
+  font-size: 3rem;
+  font-weight: bolder;
+  height: 100px;
+  width: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 17px;
+
 }
