--- a/css/style.css
+++ b/css/style.css
@@ -693,6 +693,7 @@ li {
 .ts-sidebar-menu li i {
   color: #585c64;
   margin-right: 10px;
+  font-size: 30px;
 }
 .ts-sidebar-menu li ul {
   display: block;
@@ -730,19 +731,23 @@ li {
   padding-top: 15px;
   margin-top: 20px;
 }
+.header-label{
+  border/*: 2rem solid red;
+  display: flex !important;*/
+}
 @media only screen and (min-width: 992px) {
   .ts-main-content .ts-sidebar {
-    width: 250px;
+    /*width: 180px;*/
     float: left;
   }
   .ts-main-content .content-wrapper {
-    margin-left: 250px;
+    /*margin-left: 250px;*/
   }
 }
 /* Login page */
 .login-page {
   position: absolute;
-  height: 100%;
+  height: 120%;
   width: 100%;
 }
 
