--- a/css/custom.css
+++ b/css/custom.css
@@ -420,7 +420,7 @@ big {
 .background {
   width: 100%;
   height: 100vh;
-  background: url("./assets/pexel-2.jpg") center/cover fixed;
+  background: url("../assets/pexel-2.jpg") center/cover fixed;
   animation: bg-change 25s infinite ease-in forwards;
   transition: all 0.35s ease-in;
   background-size: cover;
@@ -432,22 +432,22 @@ big {
 
 @keyframes bg-change {
   0% {
-    background-image: url("./assets/pexels-1.jpg");
+    background-image: url("../assets/pexels-1.jpg");
   }
   25% {
-    background-image: url("./assets/pexels-3.jpg");
+    background-image: url("../assets/pexels-3.jpg");
   }
 
   50% {
-    background-image: url("./assets/pexels-4.jpg");
+    background-image: url("../assets/pexels-4.jpg");
   }
 
   75% {
-    background-image: url("./assets/pexels-5.jpg");
+    background-image: url("../assets/pexels-5.jpg");
   }
 
   100% {
-    background-image: url("./assets/pexels-15.jpg");
+    background-image: url("../assets/pexels-15.jpg");
   }
 }
 /* .up, */
