--- a/css/custom.css
+++ b/css/custom.css
@@ -474,7 +474,7 @@ big {
   align-items: center;
   letter-spacing: 5px;
   /*border: 1rem solid red;*/
-  z-index: 2;
+  z-index: 3;
   visibility: 80%;
   fill-opacity: 60%;
   border-radius: 12px;
@@ -490,7 +490,9 @@ big {
   perspective: 900px;
   justify-content: space-around;
   transform: translateX(26px);
-
+  color: #d81010;
+  z-index: 3;
+  visibility: visible;
   min-height: 30vh;
 }
 
@@ -508,7 +510,7 @@ big {
   }
 
   100% {
-    color: blue;
+    color: rgb(0, 255, 132)
   }
 }
 
